control-plane/gateway07/gateway-api-0.7.1-custom/conformance/tests/httproute-request-mirror.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: request-mirror
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /mirror
    filters:
    - type: RequestMirror
      requestMirror:
        backendRef:
          name: infra-backend-v2
          namespace: gateway-conformance-infra
          port: 8080
    backendRefs:
    - name: infra-backend-v1
      port: 8080
      namespace: gateway-conformance-infra
